--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active" href="/">Home</a>
+    <a class="nav-link active" [routerLink]="['/']">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/users">Users</a>
+    <a class="nav-link" [routerLink]="['/users']">Users</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/admins">Admins</a>
+    <a class="nav-link" [routerLink]="['/admins']">Admins</a>
   </li>
 </ul>
 
