--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active" [routerLink]="['/']">Home</a>
+    <a class="nav-link" [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" [routerLink]="['/users']">Users</a>
+    <a class="nav-link" [routerLink]="['/users']" routerLinkActive="active">Users</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" [routerLink]="['/admins']">Admins</a>
+    <a class="nav-link" [routerLink]="['/admins']" routerLinkActive="active">Admins</a>
   </li>
 </ul>
 
